<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">11Meal</string>
    <string name="title_restaurant_list">Restaurants</string>
    <string name="explanation">No tag detected</string>
    <string name="title_restaurant_detail">Restaurant Detail</string>
    <string name="nfc">NFC</string>
    <string name="title_activity_nfc">NFC Swipe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>
    <string name="menu">Menu</string>
    <string name="call">Call</string>
    <string name="book">Book</string>
    <string name="title_reservation_list">Reservations</string>
    <string name="title_reservation_detail">Reservation Detail</string>
    <string name="events">Events</string>
    <string name="contact">Contact</string>
    <string name="title_activity_reservation">Reservation</string>
    <string name="information">Information</string>
    <string name="friends">Friends</string>
    <string name="order">Order</string>
    <string name="validate">Validate</string>
    <string name="viewOnMap">View on a map</string>
    <string name="date">Date</string>
    <string name="hour">Hour</string>
    <string name="payMethod">Payment Method</string>
    <string name="close">Close</string>
    <string name="description">Description</string>
    <string name="login">Username</string>
    <string name="phone_number">Phone number</string>
    <string name="password_confirm">Repeat password</string>
    <string name="firstname">Given name</string>
    <string name="lastname">Family name</string>
    <string name="unk_user">(unknown user)</string>
    <string name="unk_restaurant">Unknown Restaurant</string>

  	<string name="action_map">Map</string>
    <string name="title_mapActivity">Map activity</string>
    <string name="refuse">Refuse</string>
    <string name="accept">Accept</string>
    
</resources>
