<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.vaya.elevenMeal.RestaurantDetailFragment" >

    <ImageView
        android:id="@+id/restaurantDetailsPreview"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/shadow_bottom"
        android:scaleType="centerCrop"
        android:src="@drawable/dummy" />

    <TextView
        android:id="@+id/restaurantDetailsName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/restaurantDetailsPreview"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="25dp"
        android:background="#BB000000"
        android:paddingBottom="5dp"
        android:paddingLeft="25dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />

    <View
        android:id="@+id/shadowRDP"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@+id/restaurantDetailsPreview"
        android:background="@drawable/shadow_bottom" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/restaurantDetailsReservation"
        android:layout_below="@+id/shadowRDP"
        android:layout_marginTop="-5dp"
        android:fillViewport="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/restaurantDescriptionName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="15dp"
                android:text="@string/description"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/darker_gray" />

            <View
                android:id="@+id/etunponeypassa..."
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_below="@+id/restaurantDescriptionName"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/restaurantDetailsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etunponeypassa..."
                android:padding="5dp"
                android:layout_marginBottom="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <View
                android:id="@+id/separation1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/restaurantDetailsText"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/restaurantDetailsMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/separation1"
                android:background="@drawable/selector"
                android:clickable="true"
                android:padding="10dp"
                android:text="@string/menu"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <View
                android:id="@+id/separation2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/restaurantDetailsMenu"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/restaurantDetailsContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/separation2"
                android:background="@drawable/selector"
                android:clickable="true"
                android:padding="10dp"
                android:text="@string/contact"
                android:textAppearance="?android:attr/textAppearanceMedium" >
            </TextView>

            <View
                android:id="@+id/separation3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/restaurantDetailsContact"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/restaurantDetailsPosition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/separation3"
                android:background="@drawable/selector"
                android:clickable="true"
                android:padding="10dp"
                android:text="@string/viewOnMap"
                android:textAppearance="?android:attr/textAppearanceMedium" >
            </TextView>

            <View
                android:id="@+id/separation4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/restaurantDetailsPosition"
                android:background="@android:color/darker_gray" />

            <ImageView
                android:id="@+id/bla1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/separation1"
                android:src="@android:drawable/ic_menu_info_details" />

            <ImageView
                android:id="@+id/bla2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/separation2"
                android:src="@android:drawable/ic_menu_info_details" />

            <ImageView
                android:id="@+id/bla3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/separation3"
                android:src="@android:drawable/ic_menu_info_details" />
        </RelativeLayout>
    </ScrollView>

    <View
        android:id="@+id/shadowRDP2"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_above="@+id/restaurantDetailsReservation"
        android:background="@drawable/shadow_top" />

    <Button
        android:id="@+id/restaurantDetailsReservation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/button"
        android:text="@string/book" />

</RelativeLayout>